fixed that win popup was too big

--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ body {
     background-color: #fefefe;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 60%;
     border-radius: 8px;
     position: absolute;
     top: 50%;
